Name:                chione
Version:             0.2.1.2
Synopsis:            Static web page generator
Description:         This package provides utilties that help with
                     the generation of static web pages.
Homepage:            www.ittc.ku.edu/csdl/fpg/software/chione
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill
Maintainer:          andygill@ku.edu
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8
Source-repository head
  type:     git
  location: https://github.com/ku-fpg/chione.git

Library
  Exposed-modules:     Web.Chione
                       Web.Chione.BibTeX

  Build-depends:       base >= 4.6 && < 5.0,
                       html-kure >= 0.2,
                       kure >= 2.14.4,
                       parallel-io >= 0.3.2.2,
                       process >= 1.1.0.2,
                       time >= 1.4.0.1,
                       unix >= 2.6,
                       directory >= 1.2,
                       shake >= 0.6,
                       deepseq >= 1.3.0.1,
                       binary >= 0.5.1.1,
                       hashable >= 1.1.2.5,
                       parsec >= 3.1.3,
                       bibtex >= 0.1.0.1,
                       utf8-string >= 0.3.7,
                       bytestring >= 0.10